k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-cost-db
  namespace: cloud-cost
  labels:
    app.kubernetes.io/name: cloud-cost-dashboard
    app.kubernetes.io/component: database
spec:
  selector:
    app: database
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
      name: mysql
  type: ClusterIP
